force-app/main/default/objects/ChangeItem__c/ChangeItem__c.object-meta.xml
<CustomObject>
    <description>Individual component item within a change plan</description>
    <label>Change Item</label>
    <nameField>
        <displayFormat>ITEM-{000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>