force-app/main/default/objects/ChangeItem__c/fields/ArtifactType__c.field-meta.xml
<CustomField>
    <fullName>ArtifactType__c</fullName>
    <description>Type of metadata component</description>
    <label>Artifact Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ApexClass</fullName>
                <label>Apex Class</label>
            </value>
            <value>
                <fullName>ApexTrigger</fullName>
                <label>Apex Trigger</label>
            </value>
            <value>
                <fullName>ApexPage</fullName>
                <label>Visualforce Page</label>
            </value>
            <value>
                <fullName>ApexComponent</fullName>
                <label>Visualforce Component</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>AuraBundle</fullName>
                <label>Aura Bundle</label>
            </value>
            <value>
                <fullName>LWC</fullName>
                <label>Lightning Web Component</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>