force-app/main/default/objects/ChangeItem__c/fields/BlockReason__c.field-meta.xml
<CustomField>
    <fullName>BlockReason__c</fullName>
    <description>Reason why this item is blocked</description>
    <label>Block Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>