force-app/main/default/objects/ChangeItem__c/fields/CurrentApiVersion__c.field-meta.xml
<CustomField>
    <fullName>CurrentApiVersion__c</fullName>
    <description>Current API version of the component</description>
    <label>Current API Version</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>