force-app/main/default/objects/ChangeItem__c/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <description>Whether this item is eligible for upgrade</description>
    <label>Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
                <default>true</default>
                <label>Eligible</label>
            </value>
            <value>
                <fullName>ReadOnly</fullName>
                <label>Read Only</label>
            </value>
            <value>
                <fullName>Unsupported</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>