force-app/main/default/objects/ChangeItem__c/fields/ErrorDetails__c.field-meta.xml
<CustomField>
    <fullName>ErrorDetails__c</fullName>
    <description>Error details if deployment failed</description>
    <label>Error Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>