force-app/main/default/objects/ChangeItem__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <description>Full name identifier of the component</description>
    <label>Full Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>