force-app/main/default/objects/ChangeItem__c/fields/TargetApiVersion__c.field-meta.xml
<CustomField>
    <fullName>TargetApiVersion__c</fullName>
    <description>Target API version for upgrade</description>
    <label>Target API Version</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>