force-app/main/default/objects/ChangeItem__c/fields/UnitNumber__c.field-meta.xml
<CustomField>
    <fullName>UnitNumber__c</fullName>
    <description>Deployment unit/wave number</description>
    <label>Unit Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>